Добавляет два модальных окна

--- a/source/less/blocks/blocks.less
+++ b/source/less/blocks/blocks.less
@@ -11,3 +11,12 @@
 @import "footer";
 @import "button";
 @import "visually-hidden";
+@import "timeline";
+@import "progress-bar";
+@import "contact";
+
+// modals
+@import "modal";
+@import "modal-work";
+
+@import "text-right";
