--- a/source/less/global.less
+++ b/source/less/global.less
@@ -8,9 +8,9 @@ body {
     font-weight: 400;
     color: @main-color;
 
-    // &.no-scroll {
-    //   overflow: hidden;
-    // }
+    &.no-scroll {
+      overflow: hidden;
+    }
 }
 
 a {
