--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -42,4 +42,11 @@
     border-width: 2px;
     border-radius: 25px;
   }
+
+  &--mid {
+    min-width: 145px;
+    padding: 15px 22px;
+
+    font-size: 12px;
+  }
 }
