--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -1,5 +1,8 @@
 .contact {
   display: flex;
+
+  background: url(https://placehold.it/417x700)
+  right center no-repeat;
 }
 
 .contact__left {
@@ -22,18 +25,23 @@
   padding: 0;
   margin: 0 0 45px;
 
+  font-size: 16px;
   text-transform: uppercase;
 }
 
 .contact__info {
   padding: 0;
-  margin: 0;
+  margin: 0 0 30px;
 
   list-style: none;
 }
 
 .contact__info-item {
   margin-bottom: 15px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .contact__info-link {
@@ -41,6 +49,8 @@
 
   padding-left: 30px;
 
+  font-size: 14px;
+  font-weight: 300;
   color: @main-color;
 
   &--tel {
@@ -74,9 +84,4 @@
   }
 }
 
-.contact__right {
-  width: 53%;
 
-  background: @main-color url(https://placehold.it/480x700)
-  center no-repeat;
-}
