--- a/source/less/blocks/blocks.less
+++ b/source/less/blocks/blocks.less
@@ -1,9 +1,7 @@
 @import "header";
-@import "container";
 @import "promo";
 @import "works";
 @import "portfolio";
-@import "text-center";
 @import "about";
 @import "review";
 @import "news";
@@ -15,9 +13,15 @@
 @import "progress-bar";
 @import "contact";
 @import "form";
+@import "hide";
+@import "burger";
 
 // modals
 @import "modal";
 @import "modal-work";
 
+// helpers
+@import "text-center";
 @import "text-right";
+
+@import "container";
