--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -3,6 +3,7 @@
   vertical-align: top;
   padding: 18px 27px;
   min-width: 130px;
+  box-sizing: border-box;
 
   font-family: inherit;
   font-size: 16px;
@@ -19,6 +20,8 @@
   transition: background-color .2s linear,
   color .2s linear, box-shadow .2s linear,
   border-color .2s linear;
+
+
   &:focus {
     outline: none;
   }
@@ -48,5 +51,30 @@
     padding: 15px 22px;
 
     font-size: 12px;
+  }
+
+
+  @media @tablet {
+    min-width: 150px;
+    padding: 13px 18px;
+
+    font-size: 15px;
+  }
+
+  @media @mobile {
+    min-width: 90px;
+    padding: 11px 15px;
+
+    font-size: 12px;
+  }
+
+  @media @mobile-sm {
+    display: block;
+    width: 100%;
+
+    + .button {
+      margin-left: 0;
+      margin-top: 15px;
+    }
   }
 }
