--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -2,3 +2,8 @@
 @first-color: #6A596B;
 @fird-color: #ffffff;
 @footer-color: #8D8D8E;
+
+@mobile-sm: ~"(max-width: 565px)";
+@mobile: ~"(max-width: 767px)";
+@tablet: ~"(max-width: 991px)";
+@notebook: ~"(max-width: 1199px)";
