--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -4,4 +4,20 @@
   padding-right: 15px;
   padding-left: 15px;
   margin: 0 auto;
+
+  @media @notebook {
+    width: auto;
+  }
+
+  @media @tablet {
+    width: auto;
+  }
+
+  @media @mobile {
+    width: auto;
+  }
+
+  @media @mobile-sm {
+    width: auto;
+  }
 }
