--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -6,6 +6,7 @@
 
 .footer__inner {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
@@ -13,6 +14,16 @@
 .footer__credits {
   display: flex;
   align-items: center;
+
+  @media @tablet {
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  @media @mobile-sm {
+    flex-direction: column;
+  }
 }
 
 .footer__copyright {
@@ -23,6 +34,14 @@
   color: #BBBBCC;
 
   border-right: 2px solid rgba(@footer-color, .35);
+
+  @media @mobile-sm {
+    margin-right: 0;
+    margin-bottom: 15px;
+    padding-right: 0;
+
+    border-right: none;
+  }
 }
 
 .footer__social-list {
@@ -36,14 +55,25 @@
 
 .footer__social-item {
   margin-right: 15px;
+
+  @media @mobile-sm {
+    margin: 0 7px;
+  }
 }
 
 .footer__social-link svg {
   fill: @footer-color;
   transition: fill .2s linear;
-  
+
   &:hover {
     fill: @fird-color;
+  }
+}
+
+.footer__nav {
+  @media @tablet {
+    justify-content: center;
+    width: 100%;
   }
 }
 
@@ -53,6 +83,15 @@
   margin: 0;
 
   list-style: none;
+
+  @media @tablet {
+    justify-content: center;
+    width: 100%;
+  }
+
+  @media @mobile-sm {
+    flex-wrap: wrap;
+  }
 }
 
 .footer__nav-item {
@@ -60,6 +99,15 @@
 
   &:last-child {
     margin-right: 0;
+  }
+
+  @media @mobile-sm {
+    margin: 0 7px;
+    margin-bottom: 15px;
+
+    &:last-child {
+      margin: 0 7px;
+    }
   }
 }
 
