--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,5 +1,20 @@
 .header {
+  position: relative;
+
+  box-sizing: border-box;
   padding: 18px 0;
+
+
+  @media @mobile {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+
+    background-color: #FFFFFF;
+    box-shadow: 0 3px 7px rgba(0, 0, 0, .3);
+  }
 }
 
 .header__inner {
@@ -42,10 +57,34 @@
 
 .header__nav-list {
   display: flex;
+  align-items: center;
+  height: 100%;
   padding: 0;
   margin: 0;
 
+  flex-wrap: wrap;
+  text-align: center;
+
   list-style: none;
+
+  @media @mobile {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    z-index: 1000;
+
+    width: 100%;
+    height: auto;
+    display: none;
+
+    text-align: center;
+    background-color: #FFFFFF;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .3);
+
+    &.show {
+      display: flex;
+    }
+  }
 }
 
 .header__nav-item {
@@ -53,6 +92,11 @@
 
   &:last-child {
     margin-right: 0;
+  }
+
+  @media @mobile-sm {
+    margin-right: 0;
+    width: 100%;
   }
 }
 
@@ -100,5 +144,13 @@
       background-color: @main-color;
       color: @fird-color;
     }
+  }
+
+  @media @mobile-sm {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    margin-left: 0;
+    padding: 7px 15px;
   }
 }
