--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -4,13 +4,17 @@
   left: 0;
   z-index: 1000;
 
-  display: flex;
+  display: none;
   width: 100%;
   height: 100%;
   padding: 0;
 
   background-color: rgba(@main-color, .8);
   overflow: auto;
+
+  &.show {
+    display: flex;
+  }
 }
 
 .modal__dialog {
@@ -22,6 +26,8 @@
 
   background-color: #FFFFFF;
 
+  transform: scale(0);
+  transition: transform .2s linear;
   &--sm {
     max-width: 900px;
   }
