--- a/source/less/blocks/portfolio.less
+++ b/source/less/blocks/portfolio.less
@@ -1,26 +1,36 @@
 .portfolio {
   display: flex;
   flex-wrap: wrap;
-  margin: 0;
+  margin: 0 -15px;
   padding: 0 0 42px;
 
   list-style: none;
+
+  @media @mobile-sm {
+    margin: 0 auto;
+  }
 }
 
 .portfolio__item {
-  flex-basis: 31%;
-  padding: 0;
-  margin-bottom: 40px;
-  margin-right: 40px;
+  box-sizing: border-box;
+  flex-basis: 33.33%;
+  padding: 15px;
+  padding-bottom: 20px;
 
+  @media @mobile {
+    flex-basis: 50%;
+  }
+
+  @media @mobile-sm {
+    flex-basis: 100%;
+  }
+}
+
+.portfolio__col {
   overflow: hidden;
   border-radius: 10px;
   box-shadow: 0 0 4px rgba(@main-color, 25%);
   transition: box-shadow .2s linear;
-
-  &:nth-child(3n) {
-    margin-right: 0;
-  }
 
   &:hover {
     box-shadow: 0 0 25px rgba(@main-color, 25%);
