--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -2,15 +2,32 @@
   position: relative;
 
   display: flex;
-  padding-bottom: 100px;
+  padding-top: 100px;
+  padding-bottom: 150px;
 
   border-bottom: 1px solid rgba(@first-color, .3);
+
+  @media @tablet {
+    padding-bottom: 70px;
+  }
+
+  @media @mobile {
+    padding-top: 150px;
+    padding-bottom: 50px;
+  }
+
+  @media @mobile-sm {
+    padding-top: 130px;
+    padding-bottom: 25px;
+  }
 }
 
 .promo__content {
-  padding-top: 100px;
-
   width: 50%;
+
+  @media @mobile-sm {
+    width: 100%;
+  }
 }
 
 .promo__uptitle {
@@ -19,8 +36,13 @@
 
   font-size: 32px;
   font-weight: 200;
-  line-height: 32px;
+  line-height: 1.1;
   color: @main-color;
+
+  @media @mobile {
+    font-size: 27px;
+    line-height: 1.1;
+  }
 }
 
 .promo__title {
@@ -30,6 +52,11 @@
   font-size: 45px;
   font-weight: 700;
   line-height: 45px;
+
+  @media @mobile {
+    font-size: 30px;
+    line-height: 1.1;
+  }
 }
 
 .promo__subtitle {
@@ -45,9 +72,19 @@
   position: absolute;
   bottom: 0;
   right: 0;
+  z-index: -1;
 
   width: 50%;
-  height: 100%;
+  max-width: 514px;
+  max-height: 493px;
+
+  @media @mobile {
+    width: 400px;
+  }
+
+  @media @mobile-sm {
+    display: none;
+  }
 }
 
 .promo__social-list {
@@ -57,6 +94,10 @@
   margin: 0 0 42px;
 
   list-style: none;
+
+  @media @mobile-sm {
+    flex-wrap: wrap;
+  }
 }
 
 .promo__social-item {
