--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -1,14 +1,16 @@
 .review {
   position: relative;
   padding: 80px 0;
+  margin: 0;
 
   background: @main-color url(../img/bg-reviews.png) center no-repeat;
 }
 
-.reviews__wrapper {
+.review__wrapper {
   width: 100%;
   max-width: 830px;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .review__text {
@@ -21,7 +23,7 @@
   text-align: center;
 }
 
-.reviews__author {
+.review__author {
   position: absolute;
   top: 100%;
   left: 0;
@@ -43,7 +45,7 @@
   border: 4px solid @fird-color;
 }
 
-.reviews__name {
+.review__name {
   padding: 0;
   margin: 0 0 10px;
 
@@ -52,7 +54,7 @@
   color: @main-color;
 }
 
-.reviews__company {
+.review__company {
   padding: 0;
   margin: 0 0 10px;
 
@@ -62,7 +64,7 @@
   color: @first-color;
 }
 
-.reviews__star {
+.review__star {
   width: 13px;
   height: 13px;
 
