--- a/source/less/blocks/portfolio.less
+++ b/source/less/blocks/portfolio.less
@@ -30,6 +30,8 @@
   overflow: hidden;
   border-radius: 10px;
   box-shadow: 0 0 4px rgba(@main-color, 25%);
+  cursor: pointer;
+
   transition: box-shadow .2s linear;
 
   &:hover {
@@ -68,7 +70,3 @@
   color: @main-color;
   text-transform: uppercase;
 }
-
-// .portfolio__date {
-
-// }
