--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -64,7 +64,7 @@
   margin: 0 0 20px;
 
   font-size: 18px;
-  line-height: 18px;
+  line-height: 1.1;
   color: rgba(@main-color, .7);
 }
 
@@ -106,6 +106,7 @@
   height: 40px;
 
   transition: transform .2s linear;
+
   &:hover {
     transform: translateY(-5px);
   }
